Commit from TeleportHQ

--- a/index.html
+++ b/index.html
@@ -206,7 +206,7 @@
                     <span class="category-card-text"><span>Desks</span></span>
                   </div>
                 </category-card-wrapper>
-                <category-card-wrapper-ov5z class="category-card-wrapper-ov5z">
+                <category-card-wrapper-7mct class="category-card-wrapper-7mct">
                   <!--CategoryCard component-->
                   <div class="category-card-category-card1">
                     <img
@@ -216,8 +216,8 @@
                     />
                     <span class="category-card-text1"><span>Chairs</span></span>
                   </div>
-                </category-card-wrapper-ov5z>
-                <category-card-wrapper-5aq7 class="category-card-wrapper-5aq7">
+                </category-card-wrapper-7mct>
+                <category-card-wrapper-ufrx class="category-card-wrapper-ufrx">
                   <!--CategoryCard component-->
                   <div class="category-card-category-card2">
                     <img
@@ -227,8 +227,8 @@
                     />
                     <span class="category-card-text2"><span>Tables</span></span>
                   </div>
-                </category-card-wrapper-5aq7>
-                <category-card-wrapper-c60j class="category-card-wrapper-c60j">
+                </category-card-wrapper-ufrx>
+                <category-card-wrapper-ioo3 class="category-card-wrapper-ioo3">
                   <!--CategoryCard component-->
                   <div class="category-card-category-card3">
                     <img
@@ -238,8 +238,8 @@
                     />
                     <span class="category-card-text3"><span>Lamps</span></span>
                   </div>
-                </category-card-wrapper-c60j>
-                <category-card-wrapper-vdnq class="category-card-wrapper-vdnq">
+                </category-card-wrapper-ioo3>
+                <category-card-wrapper-1tp2 class="category-card-wrapper-1tp2">
                   <!--CategoryCard component-->
                   <div class="category-card-category-card4">
                     <img
@@ -249,8 +249,8 @@
                     />
                     <span class="category-card-text4"><span>Plants</span></span>
                   </div>
-                </category-card-wrapper-vdnq>
-                <category-card-wrapper-mqsp class="category-card-wrapper-mqsp">
+                </category-card-wrapper-1tp2>
+                <category-card-wrapper-3fm3 class="category-card-wrapper-3fm3">
                   <!--CategoryCard component-->
                   <div class="category-card-category-card5">
                     <img
@@ -262,8 +262,8 @@
                       <span>Decoration</span>
                     </span>
                   </div>
-                </category-card-wrapper-mqsp>
-                <category-card-wrapper-7w68 class="category-card-wrapper-7w68">
+                </category-card-wrapper-3fm3>
+                <category-card-wrapper-uuou class="category-card-wrapper-uuou">
                   <!--CategoryCard component-->
                   <div class="category-card-category-card6">
                     <img
@@ -275,7 +275,7 @@
                       <span>Collections</span>
                     </span>
                   </div>
-                </category-card-wrapper-7w68>
+                </category-card-wrapper-uuou>
               </div>
             </div>
             <div class="home-banner">
@@ -319,8 +319,8 @@
           </div>
           <div class="section-container">
             <div class="max-width-container">
-              <section-heading-wrapper-865o
-                class="section-heading-wrapper-865o"
+              <section-heading-wrapper-8uac
+                class="section-heading-wrapper-8uac"
               >
                 <!--SectionHeading component-->
                 <div class="section-heading-section-heading1 section-heading">
@@ -334,7 +334,7 @@
                     </span>
                   </span>
                 </div>
-              </section-heading-wrapper-865o>
+              </section-heading-wrapper-8uac>
               <div class="home-gallery">
                 <div class="home-left2">
                   <item-card-wrapper class="item-card-wrapper">
@@ -397,7 +397,7 @@
                 <div class="home-right2">
                   <div class="home-top">
                     <div class="home-left3">
-                      <item-card-wrapper-c7ll class="item-card-wrapper-c7ll">
+                      <item-card-wrapper-xhyi class="item-card-wrapper-xhyi">
                         <!--ItemCard component-->
                         <div
                           class="item-card-gallery-card1 item-cardroot-class-name2"
@@ -459,10 +459,10 @@
                             </div>
                           </div>
                         </div>
-                      </item-card-wrapper-c7ll>
+                      </item-card-wrapper-xhyi>
                     </div>
                     <div class="home-right3">
-                      <item-card-wrapper-nekl class="item-card-wrapper-nekl">
+                      <item-card-wrapper-yr37 class="item-card-wrapper-yr37">
                         <!--ItemCard component-->
                         <div
                           class="item-card-gallery-card2 item-cardroot-class-name3"
@@ -524,13 +524,13 @@
                             </div>
                           </div>
                         </div>
-                      </item-card-wrapper-nekl>
+                      </item-card-wrapper-yr37>
                     </div>
                   </div>
                   <div class="home-bottom">
                     <div class="home-left4">
-                      <item-card-wrapper-v6lg
-                        class="item-card-wrapper-v6lg"
+                      <item-card-wrapper-ejft
+                        class="item-card-wrapper-ejft"
                         rootclassname="item-cardundefined"
                       >
                         <!--ItemCard component-->
@@ -594,11 +594,11 @@
                             </div>
                           </div>
                         </div>
-                      </item-card-wrapper-v6lg>
+                      </item-card-wrapper-ejft>
                     </div>
                     <div class="home-right4">
-                      <item-card-wrapper-gzy4
-                        class="item-card-wrapper-gzy4"
+                      <item-card-wrapper-jahw
+                        class="item-card-wrapper-jahw"
                         rootclassname="item-cardundefined"
                       >
                         <!--ItemCard component-->
@@ -660,7 +660,7 @@
                             </div>
                           </div>
                         </div>
-                      </item-card-wrapper-gzy4>
+                      </item-card-wrapper-jahw>
                     </div>
                   </div>
                 </div>
@@ -687,8 +687,8 @@
           </div>
           <div class="section-container">
             <div class="max-width-container">
-              <section-heading-wrapper-ea1i
-                class="section-heading-wrapper-ea1i"
+              <section-heading-wrapper-bk1o
+                class="section-heading-wrapper-bk1o"
                 rootclassname="section-headingundefined"
               >
                 <!--SectionHeading component-->
@@ -704,7 +704,7 @@
                     </span>
                   </span>
                 </div>
-              </section-heading-wrapper-ea1i>
+              </section-heading-wrapper-bk1o>
               <div class="home-container18">
                 <blog-post-card-wrapper
                   class="blog-post-card-wrapper"
@@ -740,8 +740,8 @@
                     </div>
                   </div>
                 </blog-post-card-wrapper>
-                <blog-post-card-wrapper-u56j
-                  class="blog-post-card-wrapper-u56j"
+                <blog-post-card-wrapper-xp3u
+                  class="blog-post-card-wrapper-xp3u"
                 >
                   <!--BlogPostCard component-->
                   <div class="blog-post-card-blog-post-card1 blog-post-card">
@@ -770,9 +770,9 @@
                       </a>
                     </div>
                   </div>
-                </blog-post-card-wrapper-u56j>
-                <blog-post-card-wrapper-hhcv
-                  class="blog-post-card-wrapper-hhcv"
+                </blog-post-card-wrapper-xp3u>
+                <blog-post-card-wrapper-sis8
+                  class="blog-post-card-wrapper-sis8"
                 >
                   <!--BlogPostCard component-->
                   <div class="blog-post-card-blog-post-card2 blog-post-card">
@@ -801,7 +801,7 @@
                       </a>
                     </div>
                   </div>
-                </blog-post-card-wrapper-hhcv>
+                </blog-post-card-wrapper-sis8>
               </div>
             </div>
           </div>
