Commit from TeleportHQ

--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     <meta property="twitter:card" content="summary_large_image" />
 
     <style data-tag="reset-style-sheet">
-      html {  line-height: 1.15;}body {  margin: 0;}* {  box-sizing: border-box;  border-width: 0;  border-style: solid;  -webkit-font-smoothing: antialiased;}p,li,ul,pre,div,h1,h2,h3,h4,h5,h6,figure,blockquote,figcaption {  margin: 0;  padding: 0;}button {  background-color: transparent;}button,input,optgroup,select,textarea {  font-family: inherit;  font-size: 100%;  line-height: 1.15;  margin: 0;}button,select {  text-transform: none;}button,[type="button"],[type="reset"],[type="submit"] {  -webkit-appearance: button;  color: inherit;}button::-moz-focus-inner,[type="button"]::-moz-focus-inner,[type="reset"]::-moz-focus-inner,[type="submit"]::-moz-focus-inner {  border-style: none;  padding: 0;}button:-moz-focus,[type="button"]:-moz-focus,[type="reset"]:-moz-focus,[type="submit"]:-moz-focus {  outline: 1px dotted ButtonText;}a {  color: inherit;  text-decoration: inherit;}input {  padding: 2px 4px;}img {  display: block;}details {  display: block;  margin: 0;  padding: 0;}summary::-webkit-details-marker {  display: none;}[data-thq="accordion"] [data-thq="accordion-content"] {  max-height: 0;  overflow: hidden;  transition: max-height 0.3s ease-in-out;  padding: 0;}[data-thq="accordion"] details[data-thq="accordion-trigger"][open] + [data-thq="accordion-content"] {  max-height: 1000vh;}details[data-thq="accordion-trigger"][open] summary [data-thq="accordion-icon"] {  transform: rotate(180deg);}html { scroll-behavior: smooth  }
+      html {  line-height: 1.15;}body {  margin: 0;}* {  box-sizing: border-box;  border-width: 0;  border-style: solid;  -webkit-font-smoothing: antialiased;}p,li,ul,pre,div,h1,h2,h3,h4,h5,h6,figure,blockquote,figcaption {  margin: 0;  padding: 0;}button {  background-color: transparent;}button,input,optgroup,select,textarea {  font-family: inherit;  font-size: 100%;  line-height: 1.15;  margin: 0;}button,select {  text-transform: none;}button,[type="button"],[type="reset"],[type="submit"] {  -webkit-appearance: button;  color: inherit;}button::-moz-focus-inner,[type="button"]::-moz-focus-inner,[type="reset"]::-moz-focus-inner,[type="submit"]::-moz-focus-inner {  border-style: none;  padding: 0;}button:-moz-focus,[type="button"]:-moz-focus,[type="reset"]:-moz-focus,[type="submit"]:-moz-focus {  outline: 1px dotted ButtonText;}a {  color: inherit;  text-decoration: inherit;}pre {  white-space: normal;}input {  padding: 2px 4px;}img {  display: block;}details {  display: block;  margin: 0;  padding: 0;}summary::-webkit-details-marker {  display: none;}[data-thq="accordion"] [data-thq="accordion-content"] {  max-height: 0;  overflow: hidden;  transition: max-height 0.3s ease-in-out;  padding: 0;}[data-thq="accordion"] details[data-thq="accordion-trigger"][open] + [data-thq="accordion-content"] {  max-height: 1000vh;}details[data-thq="accordion-trigger"][open] summary [data-thq="accordion-icon"] {  transform: rotate(180deg);}html { scroll-behavior: smooth  }
     </style>
     <style data-tag="default-style-sheet">
       html {
@@ -206,7 +206,7 @@
                     <span class="category-card-text"><span>Desks</span></span>
                   </div>
                 </category-card-wrapper>
-                <category-card-wrapper-7mct class="category-card-wrapper-7mct">
+                <category-card-wrapper-bvng class="category-card-wrapper-bvng">
                   <!--CategoryCard component-->
                   <div class="category-card-category-card1">
                     <img
@@ -216,8 +216,8 @@
                     />
                     <span class="category-card-text1"><span>Chairs</span></span>
                   </div>
-                </category-card-wrapper-7mct>
-                <category-card-wrapper-ufrx class="category-card-wrapper-ufrx">
+                </category-card-wrapper-bvng>
+                <category-card-wrapper-3u9i class="category-card-wrapper-3u9i">
                   <!--CategoryCard component-->
                   <div class="category-card-category-card2">
                     <img
@@ -227,8 +227,8 @@
                     />
                     <span class="category-card-text2"><span>Tables</span></span>
                   </div>
-                </category-card-wrapper-ufrx>
-                <category-card-wrapper-ioo3 class="category-card-wrapper-ioo3">
+                </category-card-wrapper-3u9i>
+                <category-card-wrapper-tv04 class="category-card-wrapper-tv04">
                   <!--CategoryCard component-->
                   <div class="category-card-category-card3">
                     <img
@@ -238,8 +238,8 @@
                     />
                     <span class="category-card-text3"><span>Lamps</span></span>
                   </div>
-                </category-card-wrapper-ioo3>
-                <category-card-wrapper-1tp2 class="category-card-wrapper-1tp2">
+                </category-card-wrapper-tv04>
+                <category-card-wrapper-j7p2 class="category-card-wrapper-j7p2">
                   <!--CategoryCard component-->
                   <div class="category-card-category-card4">
                     <img
@@ -249,8 +249,8 @@
                     />
                     <span class="category-card-text4"><span>Plants</span></span>
                   </div>
-                </category-card-wrapper-1tp2>
-                <category-card-wrapper-3fm3 class="category-card-wrapper-3fm3">
+                </category-card-wrapper-j7p2>
+                <category-card-wrapper-bacj class="category-card-wrapper-bacj">
                   <!--CategoryCard component-->
                   <div class="category-card-category-card5">
                     <img
@@ -262,8 +262,8 @@
                       <span>Decoration</span>
                     </span>
                   </div>
-                </category-card-wrapper-3fm3>
-                <category-card-wrapper-uuou class="category-card-wrapper-uuou">
+                </category-card-wrapper-bacj>
+                <category-card-wrapper-d4sz class="category-card-wrapper-d4sz">
                   <!--CategoryCard component-->
                   <div class="category-card-category-card6">
                     <img
@@ -275,7 +275,7 @@
                       <span>Collections</span>
                     </span>
                   </div>
-                </category-card-wrapper-uuou>
+                </category-card-wrapper-d4sz>
               </div>
             </div>
             <div class="home-banner">
@@ -319,8 +319,8 @@
           </div>
           <div class="section-container">
             <div class="max-width-container">
-              <section-heading-wrapper-8uac
-                class="section-heading-wrapper-8uac"
+              <section-heading-wrapper-huki
+                class="section-heading-wrapper-huki"
               >
                 <!--SectionHeading component-->
                 <div class="section-heading-section-heading1 section-heading">
@@ -334,7 +334,7 @@
                     </span>
                   </span>
                 </div>
-              </section-heading-wrapper-8uac>
+              </section-heading-wrapper-huki>
               <div class="home-gallery">
                 <div class="home-left2">
                   <item-card-wrapper class="item-card-wrapper">
@@ -397,7 +397,7 @@
                 <div class="home-right2">
                   <div class="home-top">
                     <div class="home-left3">
-                      <item-card-wrapper-xhyi class="item-card-wrapper-xhyi">
+                      <item-card-wrapper-6e2k class="item-card-wrapper-6e2k">
                         <!--ItemCard component-->
                         <div
                           class="item-card-gallery-card1 item-cardroot-class-name2"
@@ -459,10 +459,10 @@
                             </div>
                           </div>
                         </div>
-                      </item-card-wrapper-xhyi>
+                      </item-card-wrapper-6e2k>
                     </div>
                     <div class="home-right3">
-                      <item-card-wrapper-yr37 class="item-card-wrapper-yr37">
+                      <item-card-wrapper-ftok class="item-card-wrapper-ftok">
                         <!--ItemCard component-->
                         <div
                           class="item-card-gallery-card2 item-cardroot-class-name3"
@@ -524,13 +524,13 @@
                             </div>
                           </div>
                         </div>
-                      </item-card-wrapper-yr37>
+                      </item-card-wrapper-ftok>
                     </div>
                   </div>
                   <div class="home-bottom">
                     <div class="home-left4">
-                      <item-card-wrapper-ejft
-                        class="item-card-wrapper-ejft"
+                      <item-card-wrapper-j9x7
+                        class="item-card-wrapper-j9x7"
                         rootclassname="item-cardundefined"
                       >
                         <!--ItemCard component-->
@@ -594,11 +594,11 @@
                             </div>
                           </div>
                         </div>
-                      </item-card-wrapper-ejft>
+                      </item-card-wrapper-j9x7>
                     </div>
                     <div class="home-right4">
-                      <item-card-wrapper-jahw
-                        class="item-card-wrapper-jahw"
+                      <item-card-wrapper-qy2l
+                        class="item-card-wrapper-qy2l"
                         rootclassname="item-cardundefined"
                       >
                         <!--ItemCard component-->
@@ -660,7 +660,7 @@
                             </div>
                           </div>
                         </div>
-                      </item-card-wrapper-jahw>
+                      </item-card-wrapper-qy2l>
                     </div>
                   </div>
                 </div>
@@ -687,8 +687,8 @@
           </div>
           <div class="section-container">
             <div class="max-width-container">
-              <section-heading-wrapper-bk1o
-                class="section-heading-wrapper-bk1o"
+              <section-heading-wrapper-7gz5
+                class="section-heading-wrapper-7gz5"
                 rootclassname="section-headingundefined"
               >
                 <!--SectionHeading component-->
@@ -704,7 +704,7 @@
                     </span>
                   </span>
                 </div>
-              </section-heading-wrapper-bk1o>
+              </section-heading-wrapper-7gz5>
               <div class="home-container18">
                 <blog-post-card-wrapper
                   class="blog-post-card-wrapper"
@@ -740,8 +740,8 @@
                     </div>
                   </div>
                 </blog-post-card-wrapper>
-                <blog-post-card-wrapper-xp3u
-                  class="blog-post-card-wrapper-xp3u"
+                <blog-post-card-wrapper-8ijc
+                  class="blog-post-card-wrapper-8ijc"
                 >
                   <!--BlogPostCard component-->
                   <div class="blog-post-card-blog-post-card1 blog-post-card">
@@ -770,9 +770,9 @@
                       </a>
                     </div>
                   </div>
-                </blog-post-card-wrapper-xp3u>
-                <blog-post-card-wrapper-sis8
-                  class="blog-post-card-wrapper-sis8"
+                </blog-post-card-wrapper-8ijc>
+                <blog-post-card-wrapper-x8jf
+                  class="blog-post-card-wrapper-x8jf"
                 >
                   <!--BlogPostCard component-->
                   <div class="blog-post-card-blog-post-card2 blog-post-card">
@@ -801,7 +801,7 @@
                       </a>
                     </div>
                   </div>
-                </blog-post-card-wrapper-sis8>
+                </blog-post-card-wrapper-x8jf>
               </div>
             </div>
           </div>
