Commit from TeleportHQ

--- a/index.html
+++ b/index.html
@@ -67,7 +67,7 @@
               <div class="home-middle1">
                 <div class="home-left1">
                   <span class="navbar-link">SHOP</span>
-                  <span class="navbar-link">LOOKBOOK</span>
+                  <span class="home-text11 navbar-link">LOOKBOOK</span>
                   <span class="navbar-link">SPECIAL</span>
                 </div>
                 <span class="navbar-logo-title">MOBILLIO</span>
@@ -206,7 +206,7 @@
                     <span class="category-card-text"><span>Desks</span></span>
                   </div>
                 </category-card-wrapper>
-                <category-card-wrapper-bvng class="category-card-wrapper-bvng">
+                <category-card-wrapper-iuzb class="category-card-wrapper-iuzb">
                   <!--CategoryCard component-->
                   <div class="category-card-category-card1">
                     <img
@@ -216,8 +216,8 @@
                     />
                     <span class="category-card-text1"><span>Chairs</span></span>
                   </div>
-                </category-card-wrapper-bvng>
-                <category-card-wrapper-3u9i class="category-card-wrapper-3u9i">
+                </category-card-wrapper-iuzb>
+                <category-card-wrapper-fply class="category-card-wrapper-fply">
                   <!--CategoryCard component-->
                   <div class="category-card-category-card2">
                     <img
@@ -227,8 +227,8 @@
                     />
                     <span class="category-card-text2"><span>Tables</span></span>
                   </div>
-                </category-card-wrapper-3u9i>
-                <category-card-wrapper-tv04 class="category-card-wrapper-tv04">
+                </category-card-wrapper-fply>
+                <category-card-wrapper-btee class="category-card-wrapper-btee">
                   <!--CategoryCard component-->
                   <div class="category-card-category-card3">
                     <img
@@ -238,8 +238,8 @@
                     />
                     <span class="category-card-text3"><span>Lamps</span></span>
                   </div>
-                </category-card-wrapper-tv04>
-                <category-card-wrapper-j7p2 class="category-card-wrapper-j7p2">
+                </category-card-wrapper-btee>
+                <category-card-wrapper-0wbm class="category-card-wrapper-0wbm">
                   <!--CategoryCard component-->
                   <div class="category-card-category-card4">
                     <img
@@ -249,8 +249,8 @@
                     />
                     <span class="category-card-text4"><span>Plants</span></span>
                   </div>
-                </category-card-wrapper-j7p2>
-                <category-card-wrapper-bacj class="category-card-wrapper-bacj">
+                </category-card-wrapper-0wbm>
+                <category-card-wrapper-mr31 class="category-card-wrapper-mr31">
                   <!--CategoryCard component-->
                   <div class="category-card-category-card5">
                     <img
@@ -262,8 +262,8 @@
                       <span>Decoration</span>
                     </span>
                   </div>
-                </category-card-wrapper-bacj>
-                <category-card-wrapper-d4sz class="category-card-wrapper-d4sz">
+                </category-card-wrapper-mr31>
+                <category-card-wrapper-zbf6 class="category-card-wrapper-zbf6">
                   <!--CategoryCard component-->
                   <div class="category-card-category-card6">
                     <img
@@ -275,7 +275,7 @@
                       <span>Collections</span>
                     </span>
                   </div>
-                </category-card-wrapper-d4sz>
+                </category-card-wrapper-zbf6>
               </div>
             </div>
             <div class="home-banner">
@@ -319,8 +319,8 @@
           </div>
           <div class="section-container">
             <div class="max-width-container">
-              <section-heading-wrapper-huki
-                class="section-heading-wrapper-huki"
+              <section-heading-wrapper-f1rf
+                class="section-heading-wrapper-f1rf"
               >
                 <!--SectionHeading component-->
                 <div class="section-heading-section-heading1 section-heading">
@@ -334,7 +334,7 @@
                     </span>
                   </span>
                 </div>
-              </section-heading-wrapper-huki>
+              </section-heading-wrapper-f1rf>
               <div class="home-gallery">
                 <div class="home-left2">
                   <item-card-wrapper class="item-card-wrapper">
@@ -397,7 +397,7 @@
                 <div class="home-right2">
                   <div class="home-top">
                     <div class="home-left3">
-                      <item-card-wrapper-6e2k class="item-card-wrapper-6e2k">
+                      <item-card-wrapper-ritg class="item-card-wrapper-ritg">
                         <!--ItemCard component-->
                         <div
                           class="item-card-gallery-card1 item-cardroot-class-name2"
@@ -459,10 +459,10 @@
                             </div>
                           </div>
                         </div>
-                      </item-card-wrapper-6e2k>
+                      </item-card-wrapper-ritg>
                     </div>
                     <div class="home-right3">
-                      <item-card-wrapper-ftok class="item-card-wrapper-ftok">
+                      <item-card-wrapper-lc0g class="item-card-wrapper-lc0g">
                         <!--ItemCard component-->
                         <div
                           class="item-card-gallery-card2 item-cardroot-class-name3"
@@ -524,13 +524,13 @@
                             </div>
                           </div>
                         </div>
-                      </item-card-wrapper-ftok>
+                      </item-card-wrapper-lc0g>
                     </div>
                   </div>
                   <div class="home-bottom">
                     <div class="home-left4">
-                      <item-card-wrapper-j9x7
-                        class="item-card-wrapper-j9x7"
+                      <item-card-wrapper-2gjw
+                        class="item-card-wrapper-2gjw"
                         rootclassname="item-cardundefined"
                       >
                         <!--ItemCard component-->
@@ -594,11 +594,11 @@
                             </div>
                           </div>
                         </div>
-                      </item-card-wrapper-j9x7>
+                      </item-card-wrapper-2gjw>
                     </div>
                     <div class="home-right4">
-                      <item-card-wrapper-qy2l
-                        class="item-card-wrapper-qy2l"
+                      <item-card-wrapper-gk60
+                        class="item-card-wrapper-gk60"
                         rootclassname="item-cardundefined"
                       >
                         <!--ItemCard component-->
@@ -660,7 +660,7 @@
                             </div>
                           </div>
                         </div>
-                      </item-card-wrapper-qy2l>
+                      </item-card-wrapper-gk60>
                     </div>
                   </div>
                 </div>
@@ -687,8 +687,8 @@
           </div>
           <div class="section-container">
             <div class="max-width-container">
-              <section-heading-wrapper-7gz5
-                class="section-heading-wrapper-7gz5"
+              <section-heading-wrapper-omg2
+                class="section-heading-wrapper-omg2"
                 rootclassname="section-headingundefined"
               >
                 <!--SectionHeading component-->
@@ -704,7 +704,7 @@
                     </span>
                   </span>
                 </div>
-              </section-heading-wrapper-7gz5>
+              </section-heading-wrapper-omg2>
               <div class="home-container18">
                 <blog-post-card-wrapper
                   class="blog-post-card-wrapper"
@@ -740,8 +740,8 @@
                     </div>
                   </div>
                 </blog-post-card-wrapper>
-                <blog-post-card-wrapper-8ijc
-                  class="blog-post-card-wrapper-8ijc"
+                <blog-post-card-wrapper-d719
+                  class="blog-post-card-wrapper-d719"
                 >
                   <!--BlogPostCard component-->
                   <div class="blog-post-card-blog-post-card1 blog-post-card">
@@ -770,9 +770,9 @@
                       </a>
                     </div>
                   </div>
-                </blog-post-card-wrapper-8ijc>
-                <blog-post-card-wrapper-x8jf
-                  class="blog-post-card-wrapper-x8jf"
+                </blog-post-card-wrapper-d719>
+                <blog-post-card-wrapper-goe8
+                  class="blog-post-card-wrapper-goe8"
                 >
                   <!--BlogPostCard component-->
                   <div class="blog-post-card-blog-post-card2 blog-post-card">
@@ -801,7 +801,7 @@
                       </a>
                     </div>
                   </div>
-                </blog-post-card-wrapper-x8jf>
+                </blog-post-card-wrapper-goe8>
               </div>
             </div>
           </div>
@@ -849,6 +849,10 @@
           </div>
         </div>
       </div>
+      <link
+        rel="canonical"
+        href="https://mobillio-online-store1-8a8car.teleporthq.app/"
+      />
     </div>
     <script src="https://unpkg.com/@teleporthq/teleport-custom-scripts"></script>
   </body>
